--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <img class="img-fluid rounded" src="https://blog.sonicbids.com/hs-fs/hub/245581/file-1106988643-jpeg/boxerstock_festival_atlanta_sonicbids.jpeg" alt="promo image"/>
                 </div>
                 <div class="col-6">
-                    <h1 class="px-4 py-4">Boxerstock</h1>
+                    <h1 class="px-4 py-4">Title change</h1>
                     <p class="px-4">Boxerstock is an all-day music festival, benefiting Atlanta Boxer Rescue. Boxerstock was founded in 2008 and is held every fall in Marietta, Georgia. It features an entire day of live music from local and nationally known performers. It is a family event and although the event supports the rescue and rehabilitation of Boxers, dogs of all breeds are always welcome. The festival is put on by over 150 volunteers and attracts crowds in the thousands from all over the Southeast.</p>
                 </div>
             </div>
